@@ -1,6 +1,9 @@
 ;; -*- Lisp -*- vim:filetype=lisp
 ;; some tests for clx/new-clx
-;; clisp -K full -E 1:1 -q -norc -i ../tests/tests -x '(run-test "clx/new-clx/test")'
+;; clisp -E 1:1 -q -norc -i ../tests/tests -x '(run-test "clx/new-clx/test")'
+
+(require "xlib") T
+(listp (show (multiple-value-list (ext:module-info "xlib" t)) :pretty t)) T
 
 (defparameter *dpy* (show (xlib:open-default-display))) *dpy*
 
