@@ -1,6 +1,9 @@
 ;; -*- Lisp -*- vim:filetype=lisp
 ;; some tests for libsvm
-;; clisp -K full -E 1:1 -q -norc -i ../tests/tests -x '(run-test "libsvm/test")'
+;; clisp -E 1:1 -q -norc -i ../tests/tests -x '(run-test "libsvm/test")'
+
+(require "libsvm") t
+(listp (show (multiple-value-list (ext:module-info "libsvm" t)) :pretty t)) T
 
 (integerp (show libsvm:*libsvm-version*)) T
 
