@@ -2,6 +2,7 @@
 ;; some tests for SYSCALLS
 ;; clisp -E 1:1 -q -norc -i ../tests/tests -x '(run-test "syscalls/test")'
 
+(require "syscalls") NIL
 (listp (show (multiple-value-list (ext:module-info "syscalls" t)) :pretty t)) T
 
 (os:hostent-p (show (os:resolve-host-ipaddr "localhost")))
